# house-price-mlops

./: .gitignore  Dockerfile  Dockerfile.monitor  crontab  docker-compose.yml  entrypoint.sh  house_price_mlops_report.md  pyproject.toml  requirements.txt
data/sample/: sample_input.json
mlruns/0/: meta.yaml
mlruns/330848658664964622/: meta.yaml
mlruns/330848658664964622/0bfe3e13dfb2448586f72c580d6f0b5e/: meta.yaml
mlruns/330848658664964622/29833d5b3181424f838dba1b83f05834/: meta.yaml
mlruns/330848658664964622/33f165a51a5c4342979dd238a4f33a2e/: meta.yaml
mlruns/330848658664964622/673361f259d44733b52881dd0a0c30cc/: meta.yaml
mlruns/330848658664964622/673a8c9ba3d34d34872b5c7f65f185a4/: meta.yaml
mlruns/330848658664964622/67c7f4a6cd76483c98c4cc1d8ad95cdf/: meta.yaml
mlruns/330848658664964622/75dd0f3915ce4410a6cfa06527be12d8/: meta.yaml
mlruns/330848658664964622/791e456eda064b0ca911b573220832e3/: meta.yaml
mlruns/330848658664964622/803a5c9300e24b348362a1d8ab626510/: meta.yaml
mlruns/330848658664964622/8803f9426cca4a728a812f2dcbe2c7ec/: meta.yaml
mlruns/330848658664964622/ac11b99812bb4b6a9b4c95578e8f53d9/: meta.yaml
mlruns/330848658664964622/d6bc34a4c4184bcdabf7b3289ddf3114/: meta.yaml
mlruns/330848658664964622/e2f4c081cb3844da8decaa985575a8e6/: meta.yaml
mlruns/models/house_price_rf_model/: meta.yaml
notebooks/: eda.ipynb  generate_input.ipynb  split_data.ipynb
reports/: data_drift_report.json  data_drift_report.md
src/api/: app.py
src/models/: train.py
src/monitoring/: auto_retrain.py  generate_drift_report.py
(+58 files in other folders)
