[tool.poetry]
name = "house-price-mlops"
version = "0.1.0"
description = ""
authors = ["Alexandre Tavares <arduinitavares@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
numpy = "^2.2.5"
scikit-learn = "^1.6.1"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
jupyter = "^1.1.1"
mlflow = "^2.21.3"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
evidently = "^0.7.1"
pylint = "^3.3.6"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
